# django-saas-launcher

./: .editorconfig  .flake8  .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  tox.ini
launcher/: apps.py  fields.py  forms.py  models.py  services.py  validators.py
launcher/account/: apps.py  authentication.py  services.py  signals.py
launcher/account/locale/ja/LC_MESSAGES/: django.po
launcher/account/models/: __init__.py  account.py  code.py
launcher/backends/: logging.py  pagination.py  routers.py  storage.py
launcher/locale/ja/LC_MESSAGES/: django.po
sample/: manage.py
sample/config/: hosts.py  settings.py
sample/config/urls/: __init__.py  admin.py  rest_api.py
